--- a/index.html
+++ b/index.html
@@ -137,17 +137,17 @@
         <div id="hero-slider" class="absolute inset-0 w-full h-full">
             <!-- Slide 1 -->
             <div class="hero-slide absolute inset-0 transition-opacity duration-1000 ease-in-out opacity-100">
-                <img src="https://image2url.com/r2/default/images/1769776752579-f05f7e56-c517-4bc4-92bd-2259188352af.jpg" alt="Haken Collection 1" class="w-full h-full object-cover">
+                <img src="https://image2url.com/r2/default/images/1769824294181-67f0cb40-e45b-4c7c-9452-73dbc6a54969.jpeg" alt="Haken Collection 1" class="w-full h-full object-cover">
                 <div class="absolute inset-0 bg-black/40 bg-gradient-to-t from-black/80 via-black/20 to-transparent"></div>
             </div>
             <!-- Slide 2 -->
             <div class="hero-slide absolute inset-0 transition-opacity duration-1000 ease-in-out opacity-0">
-                <img src="/api/placeholder/1920/1080" alt="Haken Collection 2" class="w-full h-full object-cover">
+                <img src="https://image2url.com/r2/default/images/1769824320867-2801d941-f9e3-44c2-8ab9-726783856f79.jpeg" alt="Haken Collection 2" class="w-full h-full object-cover">
                 <div class="absolute inset-0 bg-black/40 bg-gradient-to-t from-black/80 via-black/20 to-transparent"></div>
             </div>
             <!-- Slide 3 -->
             <div class="hero-slide absolute inset-0 transition-opacity duration-1000 ease-in-out opacity-0">
-                <img src="/api/placeholder/1920/1080" alt="Haken Collection 3" class="w-full h-full object-cover">
+                <img src="https://image2url.com/r2/default/images/1769824367485-50de29d3-1bd5-44cd-9a88-3fc21c04c946.jpeg" alt="Haken Collection 3" class="w-full h-full object-cover">
                 <div class="absolute inset-0 bg-black/40 bg-gradient-to-t from-black/80 via-black/20 to-transparent"></div>
             </div>
         </div>
