--- a/index.html/admin.html
+++ b/index.html/admin.html
@@ -25,7 +25,7 @@
             <p class="text-stone-500 text-sm mb-8">Restricted Access.</p>
             <button id="btnLogin" class="w-full py-3 bg-stone-900 text-white rounded-xl font-bold flex items-center justify-center gap-3 active:scale-95 transition-transform">
                 <img src="https://www.svgrepo.com/show/475656/google-color.svg" class="w-5 h-5">
-                Masuk Admin
+                Login di sini
             </button>
             <p id="loginError" class="text-red-500 text-xs mt-4 hidden">Akses Ditolak.</p>
         </div>
