--- a/index.html/index.html
+++ b/index.html/index.html
@@ -102,7 +102,6 @@
                     Haken Studio.
                 </span>
             </div>
-
             <div id="nav-links" class="hidden md:flex items-center gap-8 font-medium text-sm text-white/90 transition-colors">
                 <a href="#home" class="hover:text-orange-500 transition-colors">Beranda</a>
                 <a href="#about" class="hover:text-orange-500 transition-colors">Cerita Kami</a>
@@ -141,17 +140,17 @@
         <div id="hero-slider" class="absolute inset-0 w-full h-full">
             <!-- Slide 1 -->
             <div class="hero-slide absolute inset-0 transition-opacity duration-1000 ease-in-out opacity-100">
-                <img src="https://image2url.com/r2/default/images/1769776752579-f05f7e56-c517-4bc4-92bd-2259188352af.jpg" alt="Haken Collection 1" class="w-full h-full object-cover">
+                <img src="https://image2url.com/r2/default/images/1770114808627-214ff34a-e199-48e1-95d0-ddb1fdc0a499.jpegoo" alt="Haken Collection 1" class="w-full h-full object-cover">
                 <div class="absolute inset-0 bg-black/40 bg-gradient-to-t from-black/80 via-black/20 to-transparent"></div>
             </div>
             <!-- Slide 2 -->
             <div class="hero-slide absolute inset-0 transition-opacity duration-1000 ease-in-out opacity-0">
-                <img src="/api/placeholder/1920/1080" alt="Haken Collection 2" class="w-full h-full object-cover">
+                <img src="https://image2url.com/r2/default/images/1770114774977-d57dd165-7ef2-444b-aa1d-5df9f1704adf.jpeg" alt="Haken Collection 2" class="w-full h-full object-cover">
                 <div class="absolute inset-0 bg-black/40 bg-gradient-to-t from-black/80 via-black/20 to-transparent"></div>
             </div>
             <!-- Slide 3 -->
             <div class="hero-slide absolute inset-0 transition-opacity duration-1000 ease-in-out opacity-0">
-                <img src="/api/placeholder/1920/1080" alt="Haken Collection 3" class="w-full h-full object-cover">
+                <img src="https://image2url.com/r2/default/images/1770114881332-08946751-3a63-4daa-b0cf-96ab8b695a5c.jpeg" alt="Haken Collection 3" class="w-full h-full object-cover">
                 <div class="absolute inset-0 bg-black/40 bg-gradient-to-t from-black/80 via-black/20 to-transparent"></div>
             </div>
         </div>
