--- a/index.html/index.html
+++ b/index.html/index.html
@@ -111,7 +111,7 @@
                     <i data-lucide="user" class="w-4 h-4"></i> Login
                 </a>
 
-                <button id="nav-cta" class="px-5 py-2.5 rounded-full transition-all duration-300 shadow-lg bg-white text-stone-900 hover:bg-orange-50">
+                <button id="profile.html" class="px-5 py-2.5 rounded-full transition-all duration-300 shadow-lg bg-white text-stone-900 hover:bg-orange-50">
                     Belanja Sekarang
                 </button>
             </div>
