--- a/index.html/index.html
+++ b/index.html/index.html
@@ -140,7 +140,7 @@
         <div id="hero-slider" class="absolute inset-0 w-full h-full">
             <!-- Slide 1 -->
             <div class="hero-slide absolute inset-0 transition-opacity duration-1000 ease-in-out opacity-100">
-                <img src="https://image2url.com/r2/default/images/1770114808627-214ff34a-e199-48e1-95d0-ddb1fdc0a499.jpegoo" alt="Haken Collection 1" class="w-full h-full object-cover">
+                <img src="https://image2url.com/r2/default/images/1770114808627-214ff34a-e199-48e1-95d0-ddb1fdc0a499.jpeg" alt="Haken Collection 1" class="w-full h-full object-cover">
                 <div class="absolute inset-0 bg-black/40 bg-gradient-to-t from-black/80 via-black/20 to-transparent"></div>
             </div>
             <!-- Slide 2 -->
