--- a/index.html/index.html
+++ b/index.html/index.html
@@ -111,7 +111,7 @@
                     <i data-lucide="user" class="w-4 h-4"></i> Login
                 </a>
 
-                <button id="profile.html" class="px-5 py-2.5 rounded-full transition-all duration-300 shadow-lg bg-white text-stone-900 hover:bg-orange-50">
+                <button id="nav-cta" onclick="window.location.href='#shop'" class="px-5 py-2.5 rounded-full transition-all duration-300 shadow-lg bg-white text-stone-900 hover:bg-orange-50">
                     Belanja Sekarang
                 </button>
             </div>
@@ -641,7 +641,7 @@
 
     <!-- JAVASCRIPT LOGIC -->
     <script type="module">
-        import { db, ref, onValue } from './firebase-config.js';
+        import { db, ref, onValue } from './admin.html';
 
         const container = document.getElementById('shopContainer');
         const searchInput = document.getElementById('searchInput'); 
