--- a/index.html/index.html
+++ b/index.html/index.html
@@ -676,10 +676,11 @@
                     const priceHTML = isPromo 
                         ? `<span class="line-through text-stone-400 text-xs mr-2">IDR ${parseInt(product.price).toLocaleString()}</span><span class="text-orange-600 font-bold">IDR ${parseInt(product.discountPrice).toLocaleString()}</span>`
                         : `<span class="font-bold text-stone-900">IDR ${parseInt(product.price).toLocaleString()}</span>`;
-
+                    
+                    // Ganti baris btnHTML kamu dengan kode di bawah ini:
                     const btnHTML = stock <= 0 
                         ? `<button disabled class="w-full py-3 bg-stone-100 text-stone-400 rounded-xl text-sm font-bold cursor-not-allowed">Stok Habis</button>`
-                        : `<a href="detail-produk.html?id=${id}" class="block w-full text-center py-3 bg-stone-900 text-white rounded-xl text-sm font-bold hover:bg-orange-600 transition-colors">Lihat Detail</a>`;
+                        : `<button onclick="window.location.href='detail-produk.html?id=${id}'" class="block w-full text-center py-3 bg-stone-900 text-white rounded-xl text-sm font-bold hover:bg-orange-600 transition-colors shadow-lg">Lihat Detail</button>`;
 
                     container.innerHTML += `
                         <div class="product-card group bg-white rounded-2xl overflow-hidden shadow-sm border border-stone-100 transition-all hover:-translate-y-1">
