--- a/index.html/admin.html
+++ b/index.html/admin.html
@@ -171,11 +171,13 @@
                     </div>
 
                     <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 md:gap-6">
-                        <div class="stat-card group col-span-2 md:col-span-1">
+                        <div onclick="window.location.href='database.html'" class="stat-card group col-span-2 md:col-span-1 cursor-pointer hover:ring-2 hover:ring-orange-500 transition-all">
                             <div class="flex justify-between items-start mb-4">
-                                <div class="p-3 bg-stone-50 dark:bg-stone-800 rounded-2xl"><i data-lucide="users" class="w-6 h-6 text-stone-900 dark:text-white"></i></div>
-                                <span class="text-[10px] font-bold text-stone-400 bg-stone-50 dark:bg-stone-800 px-3 py-1 rounded-full">USER</span>
-                            </div>
+                                <div class="p-3 bg-stone-50 dark:bg-stone-800 rounded-2xl">
+                                    <i data-lucide="users" class="w-6 h-6 text-stone-900 dark:text-white"></i>
+                                </div>
+                                    <span class="text-[10px] font-bold text-stone-400 bg-stone-50 dark:bg-stone-800 px-3 py-1 rounded-full">USER</span>
+                                </div>
                             <h3 class="text-3xl md:text-4xl font-bold text-stone-900 dark:text-white mb-1" id="statUsers">0</h3>
                             <p class="text-xs text-stone-500 dark:text-stone-400">Pengguna Terdaftar</p>
                         </div>
